k3s-yaml/kylin.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kylin
  labels:
    app: kylin
spec:
  containers:
    - name: kylin
      image: kylin:v0.2.0
      imagePullPolicy: IfNotPresent
      command:
        - /docker-entrypoint.sh
