k3s-yaml/ngx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ngx
  labels:
    app: ngx
spec:
  containers:
    - name: ngx
      image: nginx:alpine
      imagePullPolicy: IfNotPresent
      ports:
          - containerPort: 80
      volumeMounts:
        - mountPath: /etc/nginx/conf.d/default.conf
          name: ngx-conf
  volumes:
    - name: ngx-conf
      hostPath:
        path: /home/jking/IdeaProjects/backend/data/nginx/default.conf
