k3s-yaml/kylin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kylin-svc
spec:
  selector:
    app: kylin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8444
