k3s-yaml/ngx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngx-svc
spec:
  selector:
    app: ngx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
