k3s-yaml/uos-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: uos-svc
spec:
  selector:
    app: uos
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6080
  type: NodePort
