k3s-yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: os-ingress

spec:
  rules:
    - http:
        paths:
          - path: /env
            pathType: Prefix
            backend:
              service:
                name:  ngx-svc
                port:
                  number: 80
